<resources>
    <string name="grant_permission">Grant Permission</string>
    <string name="permission_camera">This app needs camera permission to scan barcode</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="grant">GRANT</string>
    <string name="device_not_support_crop">Whoops - your device doesn\'t support the crop action!</string>
    <string name="ask_sending_amount">Enter Sending Amount</string>
    <string name="loading">Loading…</string>
    <string name="flash_not">Your device does not support flash</string>
    <string name="scan_correct_qr">Please scan the correct QR Code</string>
    <string name="scan_result">Scan result</string>
    <string name="nothing_found_try">No image found. Please try again</string>
    <string name="done">Done</string>
    <string name="nothing_found_text">Nothing found</string>
    <string name="wrong_qr_code">Wrong barcode/QR format</string>
    <string name="app_name">TotiWallet</string>
    <string name="already_have_an_account">Not an existing customer?</string>
    <string name="sign_in">Sign In</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="first_name">First Name*</string>
    <string name="Please_Enter_email_mobile_number">"Please enter E-mail or Mobile number"</string>
    <string name="Please_select_agents">Please select available agent</string>
    <string name="address">Address*</string>
    <string name="email">E-mail*</string>
    <string name="gender">Gender*</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="kyc">KYC</string>
    <string name="quick_pay">Quick Pay</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="history">History</string>
    <string name="bank_name">Bank name*</string>
    <string name="bank_account_number">Account number*</string>
    <string name="ifsc_code">IFSC Code/IBAN No*</string>
    <string name="id_issue_date">ID issue date</string>
    <string name="id_expirey_date">ID expiry date*</string>
    <string name="change_pin">Change PIN</string>
    <string name="wallet">Wallet</string>
    <string name="mobile_number">Mobile number*</string>
    <string name="sign_up">Sign Up</string>
    <string name="payment_done">Payment done</string>
    <string name="loyalty_program">Loyalty Program</string>
    <string name="more">More</string>
    <string name="proceed_to_pay">Proceed To Pay</string>
    <string name="select_country">Select country</string>
    <string name="city">City*</string>
    <string name="pay_qr_code">Pay via QR code</string>
    <string name="enter_the_amount">Enter the amount you wish to load</string>
    <string name="to_demo">To demo company \n 531264645</string>
    <string name="privacy">Privacy Policy</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="about_us">About Us</string>
    <string name="no_internet">Oops.. no internet connection available</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="add_beneficiary">Add Beneficiary</string>
    <string name="send_now">Send now</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="middle_name">Middle name</string>
    <string name="nationality">Nationality</string>
    <string name="purpose_of_transfer">Purpose of transfer</string>
    <string name="bank_code">Bank code</string>
    <string name="id_type">ID type</string>
    <string name="source_income">Source of income</string>
    <string name="availiable_agents">Available agents</string>
    <string name="country">Country</string>
    <string name="customer_details">Customer details</string>
    <string name="sending_amount">Sending amount</string>
    <string name="exchange_rate">Exchange rate</string>
    <string name="id_number">ID number</string>
    <string name="_91">+44</string>
    <string name="todo">TODO</string>
    <string name="view_reciept">View reciept</string>
    <string name="total_payable">Total payable</string>
    <string name="receiving_amount">Receiving amount</string>
    <string name="text_Referral">Referral code</string>
    <string name="or">Or</string>
    <string name="card_no">Card number:</string>
    <string name="resend_otp">Resend</string>
    <string name="transaction_details">Transaction Details:</string>
    <string name="txn_number">TXN number</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="payment_details">Payment Details:</string>
    <string name="sending_currency">Sending currency</string>
    <string name="service_fee">Service fee</string>
    <string name="other_charge">Other charge</string>
    <string name="vat_10_00">VAT/TAX</string>
    <string name="bank_details">Bank Details</string>
    <string name="branch">Branch</string>
    <string name="name">Name</string>
    <string name="id_expiry">ID expiry</string>
    <string name="relation_with_beneficiary">Relation with beneficiary*</string>
    <string name="beneficiary_details">Beneficiary Details</string>
    <string name="loyalty_points_details">Loyalty Points Details</string>
    <string name="avail_points">Available points</string>
    <string name="payoutagentname">PayoutAgentName</string>
    <string name="customer_id">Customer ID</string>
    <string name="textOffer">We offer you the best Foreign Exchange rates</string>
    <string name="create">Create an account</string>
    <string name="already">Existing customer</string>
    <string name="check_rates">Check rates</string>
    <string name="best_rate">Currency Converter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lock_rate"><u>Lock rate for 24 Hours</u></string>
    <string name="home_essentials">Home Essentials</string>
    <string name="water_bill">Water \nBill</string>
    <string name="gas_cylinder">Gas \nCylinder</string>
    <string name="dth_bill">DTH \nBill</string>
    <string name="internet_bill">Internet\nBill</string>
    <string name="electricity_bill">Electricity \nBill</string>
    <string name="please_complete_kyc">Please Complete your Registration</string>
    <string name="select_service_provider">Select service provider...</string>
    <string name="mobile_rech">Mobile \nRecharge</string>
    <string name="road_pass">Road Pass</string>
    <string name="metro_recharge">Metro Recharge</string>
    <string name="credit_card">Credit Card</string>
    <string name="fine">Fines</string>
    <string name="airlines">Airlines</string>
    <string name="property">Property</string>
    <string name="donations">Donations</string>
    <string name="add_new_account">Add new account</string>
    <string name="registerd_ac">"Registered accounts"</string>
    <string name="how_send_money">How would you like to transfer</string>
    <string name="enter_your_amount_you_want_to_load">Enter the amount you wish to load</string>
    <string name="my_cards_and_bank">My Cards</string>
    <string name="available_cards">Available cards</string>
    <string name="add_new">+Add new</string>
    <string name="add_card">+ Add new card</string>
    <string name="available_banks">Available banks</string>
    <string name="remove_bank">Remove bank</string>
    <string name="scan_code">Scan QR code</string>
    <string name="view_code">View my QR code</string>
    <string name="please_select_bank_error">Please select bank</string>
    <string name="enter_account_no_error">Please enter account number</string>
    <string name="account_no_same_error">Account number should be same.</string>
    <string name="fscs_slect_error">Please select FSCS.</string>
    <string name="convert_string">Convert</string>
    <string name="send_otp_email">Send OTP via E-mail</string>
    <string name="send_otp_mobile">Send OTP via Mobile</string>
    <string name="all_text">All</string>
    <string name="paid_text">Paid</string>
    <string name="received_text">Received</string>
    <string name="local_payments_txt">Local Payments</string>
    <string name="inter_payments_txt">International Payments</string>
    <string name="please_enter_amount">Please enter amount</string>
    <string name="enter_name_bene_error">Enter beneficairy name</string>
    <string name="plz_select_country_error">Please select country</string>
    <string name="plz_select_relation">Please select relation</string>
    <string name="ifsc_text">IFSC code</string>
    <string name="search_bank">Search bank</string>
    <string name="enter_IFSC_code_error">Enter IFSC code</string>
    <string name="please_select_id_type">Please select ID type</string>
    <string name="issuance_country">Issuance country</string>
    <string name="id_number_text">ID number*</string>
    <string name="date_hint">mm/dd/yyyy</string>
    <string name="email_txt">demo@gmail.com</string>
    <string name="date_of_birth_ex">mm/dd/yyyy</string>
    <string name="plz_select_country_code">Please select country code</string>
    <string name="enter_mobile_no_error">Please enter mobile number</string>
    <string name="first_name_text">First name</string>
    <string name="last_name_text">Last name</string>
    <string name="enter_middle_name_error">Please enter middle name</string>
    <string name="enter_first_name">Please enter first name</string>
    <string name="enter_last_name">Please enter last name</string>
    <string name="enter_dob_error">Please select date of birth</string>
    <string name="enter_email_error">Please enter E-mail</string>
    <string name="select_gender">Please select gender</string>
    <string name="select_date_txt">Select date</string>
    <string name="complete_profile">Complete your profile</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="address_enter">Enter address</string>
    <string name="select_nationlity">Select nationality</string>
    <string name="please_complete_kyc_text_dialog">Welcome to Totipay.Please complete your profile to enjoy the services.</string>
    <string name="proceed_text">Proceed</string>
    <string name="loading_txt">Loading...</string>
    <string name="select_source_income">Select the source </string>
    <string name="select_the_purpose_txt">Select the purpose</string>
    <string name="view_price_break_down">View price break down</string>
    <string name="apply_txt">Apply</string>
    <string name="enter_promo_code">Enter promo code</string>
    <string name="start_now_txt">Start Now</string>
    <string name="id_and_proof_txt">ID and proof of address</string>
    <string name="cool_selfie_your">A cool selfie of yours</string>
    <string name="all_u_need_is_txt">All you need is</string>
    <string name="verify_documentation">Please verify your documents to send or receive money</string>
    <string name="select_image_text">Select image</string>
    <string name="install_manager">Install gallery manager</string>
    <string name="plz_select_send_purpose_error">Please select purpose of transfer</string>
    <string name="plz_select_source_of_income_error">Please select source of income</string>
    <string name="enter_name_bene__first_name_error">Enter first name</string>
    <string name="send_money_via_cash">Cash pick-up service</string>
    <string name="using_finger">Using FingerPrint</string>
    <string name="setup_password">Setup a password to make this app more secure</string>
    <string name="address__hint">"Oxford street "</string>
    <string name="nationality_m">Nationality*</string>
    <string name="continue_txt">Continue</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="create_new_account_pin">Create a new PIN</string>
</resources>