<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainLinearLayoutSignUpSubmit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/image3" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/backgtound_round_up"
            android:orientation="vertical"
            android:padding="@dimen/margin_20dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:text="@string/complete_profile"
                android:textColor="@color/blakish"
                android:textSize="@dimen/text_size_20sp">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:fontFamily="@font/lato_medium"
                android:text="@string/country"
                android:textColor="@color/darkgrey"
                android:textSize="@dimen/text_size_15sp">

            </TextView>

            <TextView
                android:textSize="@dimen/text_size_14sp"
                android:fontFamily="@font/lato_medium"
                android:id="@+id/countrysignup"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:background="@drawable/edittext_grey"
                android:drawableEnd="@drawable/dropdown_arrow"
                android:gravity="center_vertical"
                android:hint="@string/select_country"
                android:padding="@dimen/margin_10dp" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:fontFamily="@font/lato_medium"
                android:text="@string/city"
                android:textColor="@color/darkgrey"
                android:textSize="@dimen/text_size_15sp">

            </TextView>

            <EditText
                android:textSize="@dimen/text_size_14sp"
                android:fontFamily="@font/lato_medium"
                android:id="@+id/citysignup"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:background="@drawable/edittext_grey"
                android:gravity="center_vertical"
                android:hint="gurgaon"
                android:padding="@dimen/margin_10dp">

            </EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:fontFamily="@font/lato_medium"
                android:text="@string/address"
                android:textColor="@color/darkgrey"
                android:textSize="@dimen/text_size_15sp">

            </TextView>

            <EditText
                android:textSize="@dimen/text_size_14sp"
                android:fontFamily="@font/lato_medium"
                android:id="@+id/addresssignup"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:background="@drawable/edittext_grey"
                android:gravity="center_vertical"
                android:hint="@string/address__hint"
                android:padding="@dimen/margin_10dp">

            </EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:gravity="center_vertical"

                android:text="@string/nationality_m"
                android:textColor="@color/darkgrey"
                android:textSize="@dimen/text_size_15sp">

            </TextView>

            <TextView
                android:textSize="@dimen/text_size_14sp"
                android:fontFamily="@font/lato_medium"
                android:id="@+id/nationalitysignup"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45dp"
                android:background="@drawable/edittext_grey"
                android:drawableEnd="@drawable/dropdown_arrow"
                android:gravity="center_vertical"
                android:hint="@string/nationality"
                android:padding="@dimen/margin_10dp"
                android:visibility="visible" />


            <Button
                android:fontFamily="@font/lato_bold"
                android:id="@+id/createnext2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/margin_20dp"
                android:background="@drawable/button_design"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_18sp" />
        </LinearLayout>

    </LinearLayout>
</layout>

