<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/please_complete_kyc"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />


                <LinearLayout
                    android:id="@+id/ifsc_layout_india"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/ifsc_text" />

                    <EditText
                        android:id="@+id/isfs_code_india"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/background_select_mood"
                        android:hint="@string/ifsc_code"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black" />


                    <Button
                        android:id="@+id/search_bank"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/gradient_btn"
                        android:padding="@dimen/_3sdp"
                        android:text="@string/search_bank"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/main_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/id_number_text" />

                    <EditText
                        android:id="@+id/id_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/background_select_mood"
                        android:hint="01234"
                        android:inputType="number"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/id_expirey_date" />

                    <TextView
                        android:id="@+id/id_expire_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/background_select_mood"
                        android:hint="@string/date_hint"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black" />




                    <LinearLayout
                        android:id="@+id/next_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:background="@drawable/background_button"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_10sdp"
                            android:padding="@dimen/_3sdp"
                            android:text="@string/continue_txt"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_18sp" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
</layout>