<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:fontFamily="@font/lato_semibold"
                    android:text="@string/verify_documentation"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/all_u_need_is_txt"
                    android:textAllCaps="true" />

                <ImageView
                    android:id="@+id/selfi_img"
                    android:layout_width="@dimen/_75sdp"
                    android:layout_height="@dimen/_75sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/selfies" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/lato_semibold"
                    android:text="@string/cool_selfie_your"
                    android:textColor="@color/black" />

                <ImageView
                    android:id="@+id/document_img"
                    android:layout_width="@dimen/_75sdp"
                    android:layout_height="@dimen/_75sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/documents" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/lato_semibold"
                    android:text="@string/id_and_proof_txt"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/button_start_now"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:background="@drawable/background_button"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/start_now_txt"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
</layout>